# compound-prism-designer

./: .git-blame-ignore-revs  .gitignore  Cargo.toml  LICENSE.md  Makefile.toml  NoteBook.ipynb  README.md  bch.toml  build.rs  catalog.agf  demo.py  design.nb  design.py  design_config.toml  designer.py  display.py  dyes.npz  environment.yml  fallbacks.py  glasscat.py  h7260_20_qe.csv  hyper.py  kernel.cu  make.toml  merit.py  noise_model.py  numbaCudaFallbacks.py  numba_workarounds.py  numpy_refrence.py  nvptx64-nvidia-cuda.json  optimization.py  optimizer.py  paper.tex  pmt.py  postprocess.py  prisms.py  pyproject.toml  ray.py  readme.txt  reference.py  (+14 more)
benches/: benchmark.rs
compound_prism_designer/: __init__.py  __main__.py  asap.py  catalog.agf  compound_prism_designer.pyi  glasscat.py  interactive.py  optimization.py  optimizer.py  rffi.py  type_hints.py  utils.py  zemax.py
compound_prism_designer_kernel/: Cargo.toml
compound_prism_designer_kernel/.cargo/: config.toml
compound_prism_designer_kernel/src/: kernel.rs  lib.rs  shader.rs
compound_prism_spectrometer/: Cargo.toml
compound_prism_spectrometer/src/: cbrt.rs  distribution.rs  drawable.rs  erf.rs  geom.rs  geometry.rs  glasscat.rs  kernel.rs  lib.rs  qrng.rs  ray.rs  roots.rs  spectrometer.rs  toric.rs  utils.rs  vector.rs  welford.rs
compoundprism/: __init__.py  __main__.py  designer.py  glasscat.py  hyper.py  merit.py  postprocess.py  prisms.py  utils.py
compoundprism/fitpack/: __init__.py  wrapper.py
compoundprism/merit/: __init__.py  basic.py  pmt.py  registry.py
compoundprism/merit/zemax/: __init__.py  pmt.py  prism_compat_0p4_NA_125um.ZMX
compoundprism/utils/: __init__.py  base.py  ctypes_utils.py  numba_ctypes_support.py  numba_fallbacks.py
derive-wrapped-from/: Cargo.toml
derive-wrapped-from/src/: core.rs  lib.rs
fitpack/: makefile
merit/: __init__.py  basic.py  pmt.py
prism/: __init__.py  rffi.py  utils.py  zemax.py
src/: clib.rs  cuda_fitness.rs  designer.rs  erf.rs  fitness.rs  geom.rs  glasscat.rs  kernel.ptx  kernel.rs  lib.rs  main.rs  optimizer.rs  pylib.rs  qrng.rs  quad.rs  ray.rs  spectrometer.rs  utils.rs  welford.rs
src/kernel/: kernel.rs  mod.rs
src/spectrometer/: cbrt.rs  distribution.rs  drawable.rs  erf.rs  geometry.rs  glasscat.rs  kernel.rs  mod.rs  qrng.rs  ray.rs  spectrometer.rs  toric.rs  utils.rs  vector.rs  welford.rs
utils/: __init__.py  base.py  numba_ctypes_support.py  numba_fallbacks.py
