[package]
name = "compound_prism_designer_kernel"
version = "0.1.0"
authors = ["Julia Tatz <tatz.j@husky.neu.edu>"]
edition = "2018"
include = ["/src/**/*", "/Cargo.toml"]

[lib]
crate-type = ["cdylib"]

# [[bin]]
# name = "kernel"
# path = "src/kernel.rs"

[target.'cfg(target_arch="nvptx64")'.dependencies]
derive_more = "0.99"
libm = "0.2"
compound_prism_spectrometer = { path = "../compound_prism_spectrometer" }
nvptx-sys = { git = "https://github.com/jdtatz/nvptx-sys.git", features = ["panic"] }
paste = "1.0"
