[package]
name = "compound_prism_spectrometer"
version = "0.1.0"
authors = ["Julia Tatz <tatz.j@husky.neu.edu>"]
edition = "2018"
include = ["/src/**/*", "/Cargo.toml"]

[lib]
bench = false
crate-type = ["rlib"]

[dependencies]
derive_more = "0.99"
libm = "0.2"
rustacuda_core = { git = "https://github.com/jdtatz/RustaCUDA.git", branch = "driver_update" }
paste = "1.0"
derive-wrapped-from = { path = "../derive-wrapped-from" }
float_eq = { version = "0.5", default-features = false }

[dev-dependencies]
statrs = "0.13"

[features]
std = ["float_eq/std"]
