[package]
name = "derive-wrapped-from"
version = "0.0.1"
authors = ["Julia Tatz <tatz.j@northeastern.edu>"]
edition = "2018"
resolver = "2"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = {version="1.0", features = ["full", "extra-traits", "fold"]}
quote = "1.0"
darling = "0.14"

[features]
allow-reference-types = []
